# GenerIoT_KWS_workspace

.github/workflows/: cicd.yml
target_sw/app/micro_kws_esp32devboard_perf/: sdkconfig.defaults
target_sw/app/micro_kws_esp32devboard_perf/.github/workflows/: cicd.yml
target_sw/app/micro_kws_esp32devboard_perf/components/mlif2/: CMakeLists.txt
target_sw/app/micro_kws_esp32devboard_perf/components/model/: CMakeLists.txt  aot_wrapper.c  tvm_wrapper.h
target_sw/app/micro_kws_esp32devboard_perf/components/model/codegen/host/include/: tvmgen_default.h
target_sw/app/micro_kws_esp32devboard_perf/components/model/codegen/host/src/: default_lib0.c  default_lib1.c
target_sw/app/micro_kws_esp32devboard_perf/components/tvm-lib/: CMakeLists.txt
